// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionPopover Component should render with actions 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    bottom={true}
    left={true}
    right={true}
    trigger={
      <Button
        flat={true}
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "content": "Edit",
            "to": "/some/link",
          },
          Object {
            "content": "Delete",
            "onClick": [MockFunction],
          },
        ]
      }
    />
  </Popover>
</div>
`;

exports[`ActionPopover Component should render with no props 1`] = `
<div
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <Popover
    bottom={true}
    left={true}
    right={true}
    trigger={
      <Button
        flat={true}
      >
        <MoreHoriz
          size={20}
        />
      </Button>
    }
  >
    <ActionList />
  </Popover>
</div>
`;
